fix(blockCarouselCities): specify cards to show on mobile, fix aspect-ration on mobile, update grid-col setting

--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -554,6 +554,11 @@ flynt-component {
 }
 
 [name='BlockCarouselCities'] {
+  .swiper-container {
+    .swiper-slide {
+        aspect-ratio: 230 / 292;
+    }
+  }
 
   @screen md {
     .swiper-container {
